<resources>
        <string name="app_name">Hangman</string>
        <string name="action_settings">Settings</string>
        <string name="first_fragment_label">First Fragment</string>
        <string name="second_fragment_label">Second Fragment</string>
        <string name="next">Next</string>
        <string name="previous">Previous</string>
        <string name="hello_first_fragment">Hello first fragment</string>
        <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
        <string name="hangman">HANGMAN</string>
        <string name="slowo"> </string>
        <string name="sprawdz_slowo">Sprawdź słowo</string>
        <string name="sprawdz_litere">Sprawdź literę</string>
        <string name="wyswietl">Wyświetl słowo</string>
</resources>